NXP-32438: Remove fragment registry from query api